# waywarp

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  README.zh-CN.md  SECURITY.md  clippy.toml  deny.toml  rustfmt.toml  typos.toml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docker.yml  release.yml
docs/: configuration.md
packaging/: PKGBUILD  nfpm.yaml
packaging/waywarp/: PKGBUILD
packaging/waywarp-bin/: PKGBUILD
src/: agent.rs  config.rs  hint.rs  input.rs  main.rs  pointer.rs  render.rs  scanner.rs
